fix(shell): content layout when not content-behind (#1637)

--- a/src/components/calcite-shell-center-row/calcite-shell-center-row.scss
+++ b/src/components/calcite-shell-center-row/calcite-shell-center-row.scss
@@ -2,6 +2,7 @@
   @extend %component-host;
   @extend %component-spacing;
   display: flex;
+  flex: 1 1 auto;
   overflow: hidden;
   background-color: transparent;
   border-left: 1px solid var(--calcite-ui-border-3);
